--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Action.sln",
-    "editor.formatOnSave": true
+    "dotnet.defaultSolution": "ElementalSlayer.sln"
 }
